--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -33,25 +33,11 @@
             <version>${javafx.version}</version>
         </dependency>
 
-        <!-- HTTP Client -->
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>4.11.0</version>
-        </dependency>
-
         <!-- SQLite JDBC -->
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.42.0.1</version>
-        </dependency>
-        
-        <!-- JSON Processing -->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.15.2</version>
         </dependency>
         
         <!-- Logging -->
@@ -83,7 +69,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.citizencard.desktop.MainApp</mainClass>
+                    <mainClass>com.citizencard.app.MainApp</mainClass>
                 </configuration>
             </plugin>
         </plugins>
