--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -33,11 +33,11 @@
             <version>${javafx.version}</version>
         </dependency>
 
-        <!-- SQLite JDBC -->
+        <!-- H2 Database -->
         <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.42.0.1</version>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.224</version>
         </dependency>
         
         <!-- Logging -->
@@ -69,7 +69,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.citizencard.app.MainApp</mainClass>
+                    <mainClass>citizencard.MainApp</mainClass>
                 </configuration>
             </plugin>
         </plugins>
