--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
 
         <!-- H2 Database -->
         <dependency>
